# code-management-agent

./: .gitignore  .gitmodules  A2A_INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  README.md  TEST_EXAMPLES.md  pyproject.toml  requirements.txt  setup.sh  test_a2a_client.py
github_agent/: __init__.py  __main__.py  a2a_server.py  agent.py  agent_executor.py  github_api_client.py  prompt.py  session_manager.py  tools.py
